# csc-871

./: .gitignore  README.md  main.py  pyproject.toml
hw1/: homework.ipynb
hw2/: references.yaml  report.typ
hw2/.ipynb_checkpoints/: homework-checkpoint.ipynb
hw4/: csc_871_hw4.ipynb  homework.ipynb  report.typ  test.py
playground/: play.ipynb
